minor: Fixed invisible `phone-text-saving-state` bug

--- a/src/css/playground.scss
+++ b/src/css/playground.scss
@@ -385,8 +385,13 @@
 
         /* Phone-only saving state div */
         #phone-text-saving-state {
-          display: block;
+          display: flex;
+          visibility: visible;
           position: absolute;
+          align-content: center;
+          justify-content: center;
+          flex-direction: row;
+          opacity: 1;
           top: 80%;
           right: 10%;
           z-index: 2;
@@ -404,11 +409,9 @@
             @keyframes fade-out {
               0% {
                 opacity: 1;
-                visibility: visible;
               }
               100% {
                 opacity: 0;
-                visibility: hidden;
               }
             }
           }
